--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,8 +2,6 @@
   display:flex;
   flex-direction: column;
   align-items: center;
-  background-color: #FFF1EB;
-  
 }
 
 .priority-indicator {
@@ -20,7 +18,6 @@
   border-radius: 5px;
   outline: none;
   font-size: larger;
-
 }
 
 .create_form button{
@@ -35,10 +32,11 @@
   flex-direction: row;
   justify-content: flex-start;
   /* align-items: center; */
-  width: 50%;
-  background-color:#FEBA9D  ;
+  width: 30%;
+  background-color:#ffffff  ;
   color: black; 
   /* border: 4px #EF9F7C solid; */
+  border-style: outset;
   border-radius: 20px;
   padding: 20px;
   margin-top: 2px;
