--- a/frontend/src/EditTask.css
+++ b/frontend/src/EditTask.css
@@ -1,8 +1,17 @@
+body {
+  background-image: url('./assets/background.jpg'); /* Update the path as necessary */
+  background-size: cover;
+  background-position: top left;
+  background-repeat: repeat;
+  width: 100%;
+  height: 100%;
+}
+
 .edit-task-container {
   width: 80%;
   margin: 20px auto;
   padding: 20px;
-  background-color: #FFF1EB;
+  background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   color: #333;
@@ -12,7 +21,7 @@
 .edit-task-container h1 {
   color: #1E8285;
   text-align: center;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin-bottom: 20px;
 }
 
@@ -29,7 +38,7 @@
   flex-direction: column;
   margin-bottom: 10px;
   font-size: 16px;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: #333;
 }
 
@@ -47,7 +56,7 @@
   align-items: center;
   gap: 10px;
   font-size: 16px;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /* Button styling consistent with the theme */
